@@ -1,3 +1,13 @@
+2011-08-03  Dimitri Glazkov  <dglazkov@chromium.org>
+
+        Teach BuilderToPort to distinguish between Release and Debug builders.
+        https://bugs.webkit.org/show_bug.cgi?id=65628
+
+        Reviewed by Adam Barth.
+
+        * Scripts/webkitpy/tool/commands/rebaseline.py: Added a smart options object and passed it to port factory.
+        * Scripts/webkitpy/tool/commands/rebaseline_unittest.py: Added tests.
+
 2011-08-03  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>
 
         [Qt] Fix running qmltests for WK2 in the bot
